fix: adjusting grey section showing at bottom of the screen so it is no longer visible, readding grey bar to mid section of transactions

--- a/frontend/src/assets/styles/Goals.module.css
+++ b/frontend/src/assets/styles/Goals.module.css
@@ -81,7 +81,7 @@ body {
 
 .mid_low {
   width: 100%;
-  height: 82px;
+  height: 153px;
   position: absolute;
   background-color: #f3f3f3ff;
   bottom: 0px;
@@ -93,7 +93,7 @@ body {
 .goal_input {
   user-select: auto;
   pointer-events: auto;
-  margin-top: 40px;
+  margin-top: 85px;
 }
 
 .goal_input_box {
