--- a/frontend/src/assets/styles/Transactions.module.css
+++ b/frontend/src/assets/styles/Transactions.module.css
@@ -44,7 +44,6 @@ body {
   position: absolute;
   background-color: #f3f3f3ff;
   bottom: 0px;
-  z-index: -1;
 }
 
 /*---------- HIGH ----------*/
@@ -97,6 +96,7 @@ body {
   top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .mid_box {
